--- a/custom-addons/complaint_handling/views/complaint_views.xml
+++ b/custom-addons/complaint_handling/views/complaint_views.xml
@@ -105,33 +105,55 @@
                         </div>
                        
                         <!-- Approval Buttons -->
-                        <div class="row g-3">
-                            <div class="col-md-3 text-center">
-                            <button name="action_save_complaint" type="object" string="Submit" class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': [('is_legal_service', '=', False)]}" confirm="Are you sure you want to submit this?"/>
-                            </div>
-                            <div class="col-md-3 " style="display: flex; justify-content: center;">
-                            <button name="action_save_complaint" type="object" string="Submit"  class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': [('is_ceo', '=', False)]}" confirm="Are you sure you want to submit this?"/>
 
-                            </div>
+                           <div class="row g-3 mt-2 d-flex justify-content-center">
+                            <div class="col-12 text-center">
+                                    <button name="action_save_complaint" type="object" string="Submit"
+                                        class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill mx-3"
+                                        attrs="{'invisible': [('is_legal_service', '=', False)]}"
+                                        confirm="Are you sure you want to approve this?"/>
+                                    <button name="action_save_complaint" type="object" string="Submit"
+                                        class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill mx-3"
+                                       attrs="{'invisible': [('is_ceo', '=', False)]}"
+                                        confirm="Are you sure you want to reject this?"/>
+                             </div>
                         </div>
                        
 
                         <!-- Accept/Reject Buttons -->
-                        <div class="row g-3">
-                            <div class="col-md-6 text-center">
-                                <button name="action_accept_legal_review" type="object" string="Accept" class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'legal_reviewed')]}" confirm="Are you sure you want to accept this?"/>
-                                <button name="action_reject_legal_review" type="object" string="Reject" class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'legal_reviewed')]}" confirm="Are you sure you want to escalate this case to CEO?"/>
-                            </div>
-                            <div class="col-md-6 text-center">
-                                <button name="action_accept_ceo_review" type="object" string="Accept" class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'ceo_reviewed')]}" confirm="Are you sure you want to accept this?"/>
-                                <button name="action_reject_ceo_review" type="object" string="Reject" class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'ceo_reviewed')]}" confirm="Are you sure you want to reject this?"/>
-                            </div>
+                        <div class="row g-3 mt-2 d-flex justify-content-center">
+                            <div class="col-12 text-center">
+                                    <button name="action_accept_legal_review" type="object" string="Approve"
+                                        class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill mx-3"
+                                        attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'legal_reviewed')]}"
+                                        confirm="Are you sure you want to approve this?"/>
+                                    <button name="action_reject_legal_review" type="object" string="Reject"
+                                        class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill mx-3"
+                                       attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'legal_reviewed')]}"
+                                        confirm="Are you sure you want to reject this?"/>
+                             </div>
                         </div>
-                        <div class="row g-3">
-                            <div class="col-md-12 text-center">
-                                <button name="action_submit" type="object" string="Submit" class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill" attrs="{'invisible': [('state', '!=', 'draft')]}" confirm="Are you sure you want to submit this to legal service department?"/>
-                            </div>
+                     
+                         <div class="row g-3 mt-2 d-flex justify-content-center">
+                            <div class="col-12 text-center">
+                                    <button name="action_accept_ceo_review" type="object" string="Approve"
+                                        class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill mx-3"
+                                        attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'ceo_reviewed')]}"
+                                        confirm="Are you sure you want to approve this?"/>
+                                    <button name="action_reject_ceo_review" type="object" string="Reject"
+                                        class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill mx-3"
+                                       attrs="{'invisible': ['|', ('is_creator', '=', False), ('state', '!=', 'ceo_reviewed')]}"
+                                        confirm="Are you sure you want to reject this?"/>
+                             </div>
                         </div>
+                        <div class="row g-3 mt-4 d-flex justify-content-center">
+                                <div class="col-12 text-center">
+                                    <button name="action_submit" type="object" string="Submit"
+                                        class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
+                                        attrs="{'invisible': [('state', '!=', 'draft')]}" 
+                                        confirm="Are you sure you want to submit this?"/>
+                                </div>
+                        </div> 
                     </div>
                 </div>
             </div>
