--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -167,7 +167,7 @@
                                                 <input id="recruitment1" type="text"
                                                     class="form-control s_website_form_input"
                                                     name="partner_name" required=""
-                                                    data-fill-with="name"/>
+                                                    />
                                             </div>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@
                                                 <input id="recruitment2" type="email"
                                                     class="form-control s_website_form_input"
                                                     name="email_from" required=""
-                                                    data-fill-with="email"/>
+                                                   />
                                             </div>
                                         </div>
                                     </div>
@@ -197,7 +197,7 @@
                                                 <input id="recruitment3" type="tel"
                                                     class="form-control s_website_form_input"
                                                     name="partner_mobile" required=""
-                                                    data-fill-with="phone"/>
+                                                    />
                                             </div>
                                         </div>
                                     </div>
@@ -210,7 +210,7 @@
                                             </label>
                                             <div class="col-sm">
                                                 <input  type="number" class="form-control s_website_form_input"
-                                                    name="cgpa" step="any" data-fill-with="cgpa"
+                                                    name="cgpa" step="any" 
                                                      required=""/>
                                             </div>
                                         </div>
@@ -241,10 +241,10 @@
                                                 <i class="fa fa-linkedin fa-2x m-1 o_linkedin_icon"></i>
                                                 <input id="recruitment4" type="text"
                                                     class="form-control s_website_form_input pl64"
-                                                    placeholder="e.g. https://www.linkedin.com/in/fpodoo/"
+                                                    placeholder="e.g. https://www.linkedin.com/in/"
                                                     style="padding-left: 40px"
                                                     name="linkedin_profile"
-                                                    data-fill-with="linkedin_profile"/>
+                                                    />
                                             </div>
                                         </div>
                                     </div>
