Attendance and remark request is done

--- a/addons/hr_attendance/views/hr_attendance_view.xml
+++ b/addons/hr_attendance/views/hr_attendance_view.xml
@@ -7,7 +7,8 @@
         <field name="name">hr.attendance.tree</field>
         <field name="model">hr.attendance</field>
         <field name="arch" type="xml">
-            <tree string="Employee attendances" editable="bottom" sample="1">
+            <!-- <tree string="Employee attendances" editable="bottom" sample="1"> -->
+            <tree string="Employee attendances" sample="1">
                 <field name="employee_id"/>
                 <field name="check_in"/>
                 <field name="check_out"/>
@@ -57,6 +58,7 @@
                         <field name="employee_id"/>
                         <field name="check_in"/>
                         <field name="check_out"/>
+                        <field name="remark" readonly="1"/>
                     </group>
                 </sheet>
             </form>
