--- a/custom-addons/hr_education/report/template.xml
+++ b/custom-addons/hr_education/report/template.xml
@@ -4,7 +4,7 @@
         <t t-call="web.html_container">
             <t  t-foreach="docs" t-as="doc">
                 <t t-call="web.external_layout">
-                    <div style="padding: 20px; font-family: Arial, sans-serif; border: 1px solid #ddd;">
+                    <div class="page" style="padding: 20px; font-family: Arial, sans-serif; border: 1px solid #ddd;">
                     <!-- Report Header -->
                         <div style="text-align: center; margin-bottom: 20px;">
                             <h2 style="color: #2c3e50;">Education Plan Report</h2>
