--- a/custom-addons/hr_education/report/template_for_hr.xml
+++ b/custom-addons/hr_education/report/template_for_hr.xml
@@ -5,7 +5,7 @@
             <t  t-foreach="docs" t-as="doc">
                 
                     <t t-call="web.external_layout">
-                        <div style="padding: 20px; font-family: Arial, sans-serif; border: 1px solid #ddd;">
+                        <div class="page" style="padding: 20px; font-family: Arial, sans-serif; border: 1px solid #ddd;">
                             <!-- Report Header -->
                             <div style="text-align: center; margin-bottom: 20px;">
                                 <h2 style="color: #2c3e50;">Annual Hr Education Report</h2>
