--- a/custom-addons/clearance_request/views/clearance_views.xml
+++ b/custom-addons/clearance_request/views/clearance_views.xml
@@ -134,14 +134,14 @@
                                         confirm="Are you sure you want to reject this?"/>
                              </div>
                         </div>
-                        <div class="row g-3 mt-2 d-flex justify-content-center">
+                        <!-- <div class="row g-3 mt-2 d-flex justify-content-center">
                                 <div class="col-12 text-center">
                                     <button name="action_save_clearance" type="object" string="Submit"
                                         class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
                                         attrs="{'invisible':[('state','!=','draft')]}"
                                         confirm="Are you sure you want to submit this?"/>
                                 </div>
-                        </div> 
+                        </div>  -->
                     </div>
                 </div>
             </div>
