--- a/custom-addons/clearance_request/report/template.xml
+++ b/custom-addons/clearance_request/report/template.xml
@@ -52,7 +52,7 @@
 									Reason
 								</td>
 								<td style="padding: 10px; border: 1px solid #ddd;">
-									<span t-field="o.reason" />
+									<span t-field="o.employee_reason" />
 								</td>
 							</tr>
 							<tr>
